updated the conclusion section

--- a/article/sigproc-sp.tex
+++ b/article/sigproc-sp.tex
@@ -198,8 +198,9 @@ Another optimization we realized...
 Illustrated in Figure 2, explain the figure here...
 
 \section{Conclusion and Future Work}
-Conclusion goes here...
+This paper presents our work on near-duplicate detection of Wikipedia articles at various granularity levels using LSH technique. Our novel MapReduce algorithm tackles the problem by transforming it into more manageable pieces where each piece handled in parallel. Our unique contribution includes empirical analysis of signatures belonging to Wikipedia articles at k-gram level. Experimental results verify that the proposed method is able to effectively and efficiently detect similar articles.
 
+In the future, we would like to investigate revision histories of these articles, correlate them with their timestamps, and better relate similarities based on temporal dimensions. 
 
 \section{Acknowledgments}
 We would like to thank all of the anonymous contributors. We would especially like to thank Jimmy Lin for his advise and directions.
