Fixed wrong email address

--- a/article/sigproc-sp.tex
+++ b/article/sigproc-sp.tex
@@ -36,7 +36,7 @@
 \alignauthor Joshua Bradley\\
        \affaddr{University of Maryland, Department of Computer Science}\\
        \affaddr{College Park, Maryland 20740}\\
-       \email{jgbradley@cs.umd.edu}
+       \email{jgbrad1@cs.umd.edu}
 % 3rd. author
 \alignauthor Sarah Weissman\\
        \affaddr{University of Maryland, College of Information Studies}\\
