--- a/article/sigproc.bib
+++ b/article/sigproc.bib
@@ -35,14 +35,14 @@
 
 @INPROCEEDINGS{hajishirzi:andd,
 	AUTHOR = "Hannaneh Hajishirzi and Wen-tau Yih and Aleksander Kolcz",
-	TITLE = "{Adaptive Near-Duplicate Detection via Similarity Learning",
+	TITLE = "Adaptive Near-Duplicate Detection via Similarity Learning",
 	BOOKTITLE = "Proceedings of the 33rd international ACM SIGIR conference on Research and development in information retrieval",
 	PAGES = "419-426",
 	YEAR = {2010}	}
 
 @INPROCEEDINGS{lin:brute,
 	AUTHOR = "Jimmy Lin",
-	TITLE = "{Brute Force and Indexed Approaches to Pairwise Document Similarity Comparisons with MapReduce",
+	TITLE = "Brute Force and Indexed Approaches to Pairwise Document Similarity Comparisons with MapReduce",
 	BOOKTITLE = "Proceedings of the 32nd international ACM SIGIR conference on Research and development in information retrieval",
 	PAGES = "155-162",
 	YEAR = {2009}	}
@@ -50,7 +50,7 @@
 @INPROCEEDINGS{manku:web,
 	AUTHOR = "Gurmeet Singh Manku and Arvind Jain and Anish Das Sarma",
 	TITLE = "Detecting Near-Duplicates for Web Crawling",
-	BOOKTITLE = "{Proceedings of the 16th international conference on World Wide Web",
+	BOOKTITLE = "Proceedings of the 16th international conference on World Wide Web",
 	PAGES = "141-150",
 	YEAR = {2007}	}
 
@@ -71,5 +71,3 @@
 	PAGES = {107-113},
 	MONTH = "January",
 	YEAR = {2008}	}
-
-
